--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,151 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.vela-app {
+
+}
+.header {
+  background-color: #FFFFFF;
+  box-shadow: 0px 4px 10px rgba(79, 79, 79, 0.07);
+  /* box-shadow: 0 1px 2px 0 rgba(78, 84, 91, 0.15); */
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  z-index: 10;
+}
+.header-left{
+  display: flex;
+  width: 50%;
+}
+.logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 28px;
+  /* identical to box height */
+
+  text-align: right;
+
+  color: #1875F0;
+}
+.search{
+  display: flex;
+  padding-left: 20px;
+  align-items: center;
+  font-family: Segoe UI;
+  font-size: 12px;
+  line-height: 16px;
+
+color: #979797;
+}
+.header-right{
+  display: flex;
+  width: 50%;
+  justify-content: flex-end;
+
+}
+.header-right .header-right-contents {
+  display: flex;
+  width: 75%;
+  justify-content: space-around;
+  font-family: Segoe UI;
+  font-size: 14px;
+  line-height: 19px;
+  color: #647787;
+}
+
+.header-right .header-right-contents>div{
+  display: flex;
+  align-items: center;
+}
+.profile-info{
+  display: flex;
+}
+.profile-info .hello{
+  font-size: 10px;
+  line-height: 13px;
+  display: flex;
+  justify-content: flex-end;
+}
+.user-pic{
+  margin-left: 10px;
+}
+.user-pic>img{
+  border-radius: 50%;
+}
+.main-container{
+  display: flex;
+}
+.side-bar{
+  background-color: #FFFFFF;;
+  width: 20%;
+  height: 1450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-content{
+  background-color: #EAEEF0;
+  width: 80%;
+  height: 1450px;
+}
+
+.sidebar-sections{
+  margin-top: 20px;
+  width: 100%;
+  
+  font-family: Segoe UI;
+  font-size: 11px;
+  line-height: 15px;
+
+  color: #647787;
+}
+
+.sidebar-sections>span {
+  padding-left: 50px;
+  /* margin-bottom: 10px; */
+}
+
+.generate-invoice{
+  background: #27AE60;
+  border-radius: 30px;
+  width: 163px;
+  height: 33px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  display: flex;
+  /* align-items: flex-end; */
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: #FFFFFF;
+
+  justify-content: center;
+  align-items: center;
+
+}
+
+.section-item{
+  width: 100%;
+  height: 32px;
+  padding-left: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.overview{
+  background: #E8F1FD;
+  /* opacity: 0.1; */
+  border-left: 2px solid #1875F0;
 }
