--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,4 +1,5 @@
 .chart-container{
+    margin-top: 40px;
     display: flex;
     width: 100%
 }
@@ -18,19 +19,42 @@
     width: 30%;
     height: auto;
 }
-.order-summary{
+.summary{
     /* width: 30%; */
     height: 50%;
     background: #FFFFFF;
     border: 1.5px solid #E5E5E5;
     box-sizing: border-box;
     border-radius: 2px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-.payment-summary{
-    /* width: 30%; */
-    height: 50%;
-    background: #FFFFFF;
-    border: 1.5px solid #E5E5E5;
-    box-sizing: border-box;
-    border-radius: 2px;
+
+.summary>div{
+    font-family: Segoe UI;
+    font-size: 14px;
+    line-height: 16px;
+    
+    color: #262626;
+}
+
+.summary>div:first-child{
+    font-weight: bold;
+}
+
+.summary-details{
+
+}
+
+.bar-container{
+    width: 90%;
+    height: 4px;
+    background-color: #FDC203;
+}
+.bar{
+    width: 80%;
+    height: 4px;
+    background-color: #27AE60;
 }
