--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -6,7 +6,7 @@
 
 .chart-summary{
     position: relative;
-    height: 329px;
+    /* height: 329px; */
     width: 70%;
 
     background: #FFFFFF;
